<?xml version="1.0"?>
<package>
  <name>ros_utils</name>
  <version>0.0.0</version>
  <description>ROS Utils</description>

  <maintainer email="kshitijgoel16061995@gmail.com">Kshitij Goel</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>python-rospkg</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>tf2</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
